--- a/Wingtiptoys/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Wingtiptoys/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -32,7 +32,7 @@
             <a class="nav-link text-dark" [routerLink]="['/fetch-data']">Fetch data</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/car-list']">Cars</a>
+            <a class="nav-link text-dark" [routerLink]="['/cars']">Cars</a>
           </li>
         </ul>
       </div>
