--- a/Wingtiptoys/ClientApp/src/app/car-list/car-list.component.html
+++ b/Wingtiptoys/ClientApp/src/app/car-list/car-list.component.html
@@ -2,20 +2,9 @@
 
 <p *ngIf="!products"><em>Loading...</em></p>
 
-<!--<div *ngIf="products" class="form-group has-search">
+<div class="form-group has-search">
   <span class="fa fa-search form-control-feedback"></span>
-  <input [(ngModel)]="search" type="text" class="form-control" placeholder="Search">
-  <button type="button" class="btn btn-primary">Search</button>
-</div>-->
-<div class="input-group">
-  <!--<span class="fa fa-search form-control-feedback"></span>-->
-  <input #search type="text" class="form-control" placeholder="Search car names and descriptions">
-  <div class="input-group-append">
-    <button class="btn btn-secondary" type="button">
-      <i class="fa fa-search"></i>
-      <!--Search-->
-    </button>
-  </div>
+  <input #search type="text" class="form-control" placeholder="Search">
 </div>
 
 <p class="description" *ngIf="products">Now showing {{products.length}} car{{products.length===1 ? '' : 's'}}.</p>
